--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,4 +6,18 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - 80:80
+      - 8080:8080
+    environment:
+      - PORT=8080
+    develop:
+      watch:
+        - path: ./public
+          action: sync
+          target: /var/www/html
+        - path: ./src
+          action: sync
+          target: /var/www/src
+        - path: database/setup.sql
+          action: rebuild
+        - path: .htaccess
+          action: rebuild
