Pretty Sure Work

--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,8 @@
 ErrorDocument 404 /page-not-found.php
 
+Header set Cache-Control "no-cache, no-store, must-revalidate"
+Header set Pragma "no-cache"
+
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}\.php -f
