--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
-  "cSpell.enableFiletypes": ["sql", "sqlite"],
+  "cSpell.enableFiletypes": [
+    "sql",
+    "sqlite"
+  ],
   "cSpell.words": [
     "AUTOINCREMENT",
     "ILIKE",
